AWS_Cloud/CloudFormation/Hello.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Learing Cloudformation",
    "Parameters": {
        "keyname": {
            "Description": "Enter the Key Name",
            "Type": "AWS::EC2::KeyPair::KeyName",
        },
        "imageid": {
            "Description": "ami id",
            "Type": "String",
            "Default": "ami-00e782930f1c3dbc7"
        },
        "ntiercidr": {
            "Description": "cidr range of network",
            "Type": "String",
            "Default": "10.100.0.0/16"
        },
        "websubnetcidr": {
            "Description": "subnet range for web",
            "Type": "String",
            "Default": "10.100.0.0/24"
        },
        "dbsubnetcidr": {
            "Description": "subnet range for db",
            "Type": "String",
            "Default": "10.100.1.0/24"
        },
        "websubnetaz": {
            "Description": "az of web",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        },
        "dbsubnetaz": {
            "Description": "az of db",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        }
        
    },
    "Resources": {
        "ntier": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "ntiercidr"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "From CF"
                    }
                ]
            }
        },
        "web": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "ntier"
                },
                "CidrBlock": {
                    "Ref": "websubnetcidr"
                },
                "AvailabilityZone": {
                    "Ref": "websubnetaz"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Web-Subnet"
                    }
                ]
            }
        },
        "db": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "ntier"
                },
                "CidrBlock": {
                    "Ref": "dbsubnetcidr"
                },
                "AvailabilityZone": {
                    "Ref": "dbsubnetaz"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Db-Subnet"
                    }
                ]
            }
        },
        "allowssh": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "allow ssh",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "VpcId": {
                    "Ref": "ntier"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "AllowSSH"
                    }
                ]
            }
        },
        "webserver": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "KeyName": {
                    "Ref": "keyname"
                },
                "ImageId": {
                    "Ref": "imageid"
                },
                "InstanceType": "t2.micro",
                "SecurityGroupIds": [
                    {
                        "Ref": "allowssh"
                    }
                ],
                "SubnetId": {
                    "Ref": "web"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WebServer"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -ex",
                                "yum install httpd -y",
                                "service httpd start"
                            ]
                        ]
                    }
                }
            }
        }
    },
    "Outputs": {
        "vpcid": {
            "Value": {
                "Ref": "ntier"
            }
        },
        "websubnet": {
            "Value": {
                "Ref": "web"
            }
        },
        "dbsubnet": {
            "Value": {
                "Ref": "db"
            }
        },
        "webserverid": {
            "Value": {
                "Ref": "webserver"
            }
        },
        "webserverip": {
            "Value": {
                "Fn::GetAtt": [
                    "webserver",
                    "PrivateIp"
                ]
            }
        },
        "websubnetaz": {
            "Value": {
                "Fn::GetAtt": [
                    "web",
                    "AvailabilityZone"
                ]
            }
        }
    }
}
